<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    tools:context=".ui.reunion_list.DetailReunionActivity"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:padding="10dp"
    android:layout_marginTop="130dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titre_Reunion"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:background="@color/light_grey"
        android:text="DETAIL REUNION " />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/nom_Reunion"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="Nom reunion :" />

        <TextView
            android:id="@+id/inom_Reunion"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:hint="Nom"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/date_Reunion"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="Date Reunion :" />

        <TextView
            android:id="@+id/idate_Reunion"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:hint="JJ:MM:AAAA"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/heure_Reunion"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="Heure Reunion :" />

        <TextView
            android:id="@+id/iheure_Reunion"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:hint="HH:MM"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/nom_salle_Reunion"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="Nom Salle :" />


        <TextView
            android:id="@+id/inom_salle_Reunion"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="salle"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/participants_Reunion"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="Participants :" />

        <TextView
            android:id="@+id/iparticipant_Reunion"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="Participant"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/returnback"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cornerRadius="10dp"
        android:layout_marginTop="30dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="Return"/>

</LinearLayout>