<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

   >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/tab_reunion_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/dodger_blue"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Ma réu"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

            <ImageView
                android:id="@+id/buttonFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:tint="@color/white"
                android:src="@drawable/filter" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_search"
            android:layout_below="@id/tab_reunion_title"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_margin="5dp"
            android:layout_height="50dp"/>


        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/list_reunion"
            android:name="com.openclassrooms.reunion.ui.reunion_list.ReunionFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_search"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="16dp"
            app:layoutManager="LinearLayoutManager"
            tools:context=".ui.reunion_list.ReunionFragment"
            tools:listitem="@layout/fragment_reunion"
            tools:itemCount="10"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_reunion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/list_reunion"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/plus"
            app:tint="@color/white"
            app:backgroundTint="@color/red"
         />
    </RelativeLayout>



</LinearLayout>