<resources>
    <string name="app_name">Ma réu</string>
    <string name="activity_new_reunion">New reunion</string>
    <string name="menu_date">Date</string>
    <string name="menu_lieu">Lieu</string>
</resources>
