...
                    android:layout_height="38dp"
                    android:hint="Participant"
                    android:inputType="text" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:enabled="false"
...
